--- a/html/upload.html
+++ b/html/upload.html
@@ -4,52 +4,36 @@
 		<meta charset="utf-8">
 		<title>StArPl - Hochladen</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="js/fileinput.min.js"></script> <!-- 4.4.3-10 -->
+		<script src="js/general.js"></script>
 		<script src="js/upload.js"></script>
 		<link rel="icon" href="img/icon.ico">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/fileinput.min.css"> <!-- 4.4.3-10 -->
 		<link rel="stylesheet" href="css/own.css">
 	</head>
 	<body>
-		<div class="jumbotron center-block box-header" onclick="//location.reload();" style="cursor: pointer;">
+		<div class="jumbotron center-block box-header" onclick="//location.reload();" id="starpl-header">
 			<!-- <img src="img/logo.png" width="100px" height="100px" /></span> -->
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Hochladen</h2>
-			<div class="text-right">
-				<form method="post" action="">
-					<span id="divEditButtons" class="collapse">
-						<a href="./?create" class="btn btn-default">
-							<span class="glyphicon glyphicon-user"></span> Benutzer verwalten
-						</a>
-						<a href="./?edit" id="buttonEdit" class="btn btn-default">
-							<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
-						</a>
-					</span>
-					<!-- <a href="./?edit" class="btn btn-default">
-						<span class="glyphicon glyphicon-pencil"></span> Bearbeiten
-					</a> -->
-					<button type="submit" name="logout" class="btn btn-danger">
-						<span class="glyphicon glyphicon-log-out"></span> Abmelden
-					</button>
-				</form>
-			</div>
 		</div>
+
 <!-- Nav -->
 		<nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="113">
 			<div class="container">
 				<ul class="nav navbar-nav" id="inner-starpl-top-nav">
-					<li class="active"><a href="#">StArPl</a></li>
-					<li class="logoutHidden collapse"><a href="./?create"><span class="glyphicon glyphicon-user"></span>Benutzer verwalten</a></li>
+					<li class="active"><a href="/">StArPl</a></li>
+					<li class="logoutHidden collapse"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>
 					<li class="logoutHidden collapse" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span> Bearbeiten </a></li>
-					<!-- <li class="logoutHidden uploadLink collapse"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span> Hochladen </a></li> -->
-					<!-- <li id="loginLink" class="collapse"><a href="./?upload"><span class="glyphicon glyphicon-log-in"></span> Login </a></li> -->
-					<li id="logoutLink" class="collapse" onclick="$('#logoutButton').submit()"><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
+					<li id="logoutLink" class="collapse" onclick="logout()"><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
 				</ul>
 			</div>
 		</nav>
 <!-- Nav end -->
+
+
 		<div class="center-block box-content">
 			<form method="post" action="." name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
 				<h3>Hochladen von Arbeiten</h3>
