--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -37,39 +37,44 @@
 		<!-- Nav end -->
 
 		<div class="center-block box-content">
+
 			<table class="table table-stripped table-hover table-bordered table-condensed" id="tableExistingUsers">
 				<thead id="tableHeader"></thead>
 				<tbody></tbody>
 			</table>
+
 			<h3 id="userFormTitle">Temporären Studenten-Account erstellen</h3>
-        <form method="post" action="" name="formCreateUsers" id="formCreateUsers" onsubmit="//return createUser();" enctype="multipart/form-data" >
-					<div class="form-group">
-            <div class="input-group">
-							<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-							<input class="form-control"  data-toggle="tooltip" data-placement="top" title="Bitte geben Sie hier die Studenten-Kennung ein." id="username" name="username" placeholder="Name"  required />
-            </div>
+
+      <form method="post" action="" name="formCreateUsers" id="formCreateUsers" onsubmit="//return createUser();" enctype="multipart/form-data" >
+				<div class="form-group">
+          <div class="input-group">
+						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+						<input class="form-control"  data-toggle="tooltip" data-placement="top" title="Bitte geben Sie hier die Studenten-Kennung ein." id="username" name="username" placeholder="Name"  required />
           </div>
-          <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-              <input class="form-control" type="date" data-toggle="tooltip" data-placement="top" title="Bitte geben sie einen Zeitraum an" id="datum_gueltig" name="datum_gueltig"  required />
-              <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-              <input class="form-control" type="time" id="time_gueltig" name="time_gueltig" value="00:00"  required />
-            </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+            <input class="form-control" type="date" data-toggle="tooltip" data-placement="top" title="Bitte geben sie einen Zeitraum an" id="datum_gueltig" name="datum_gueltig"  required />
+            <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+            <input class="form-control" type="time" id="time_gueltig" name="time_gueltig" value="00:00"  required />
           </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-success">
-              <span class="glyphicon glyphicon-ok"></span> Zugang erstellen
-            </button>
-						<button onclick="resetUserForm()" type="button" id="cancelRefresh" class="btn btn-alarm collapse">
-							<span class="glyphicon glyphicon-remove"></span> Verlängern abbrechen
-						</button>
-          </div>
-        </form>
-				<div id="formUser-divError" class="alert alert-danger collapse">
-				</div>
-				<div id="formUser-divSuccess" class="alert alert-success collapse">
-				</div>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-success">
+            <span class="glyphicon glyphicon-ok"></span> Zugang erstellen
+          </button>
+					<button onclick="resetUserForm()" type="button" id="cancelRefresh" class="btn btn-alarm collapse">
+						<span class="glyphicon glyphicon-remove"></span> Verlängern abbrechen
+					</button>
+        </div>
+s      </form>
+
+			<div id="formUser-divError" class="alert alert-danger collapse">
+			</div>
+			<div id="formUser-divSuccess" class="alert alert-success collapse">
+			</div>
+
     </div>
   </body>
 </html>
