--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -10,6 +10,7 @@
 		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
 		<script src="js/general.js"></script>
 		<script src="js/viewArbeiten.js"></script>
+		<script src="js/fileinput.min.js"></script> <!-- 4.4.3-10 -->
 		<link rel="icon" href="img/icon.ico">
 		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"> -->
@@ -17,6 +18,7 @@
 		<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css">
 		<link rel="stylesheet" href="css/own.css">
+		<link rel="stylesheet" href="css/fileinput.min.css"> <!-- 4.4.3-10 -->
 	</head>
 	<body>
 
@@ -77,7 +79,16 @@
 							<tbody id="tableBodyDetailledArbeit"></tbody>
 							<tbody id="tableBodyDetailledArbeitEdit"></tbody>
 						</table>
-						<div class="form-group text-right" id="leaveButtons">
+						<h4 id="arbeitSearchwords"></h4>
+						<div id="add" class="form-inline editOnly">
+							<span class="input-group-btn">
+								<input class="form-control" id="schlagwort" placeholder="Neues Schlagwort" list="schlagwoerter" />
+								<button type="button" class="btn btn-success addButton" onclick="addSW();">
+									<i class="glyphicon glyphicon-plus"></i>
+								</button>
+							</span> 
+						</div>
+						<div class="form-group text-right editOnly" id="leaveButtons">
 							<button onclick="return resetArbeit();" class="btn btn-danger">
 								<span class="glyphicon glyphicon-remove"></span> Abbrechen
 							</button>
