Extract navbar in own partial

--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -23,8 +23,11 @@
       <h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Studenten-Accounts</h2>
     </div>
 
+		<?php
+			include('html/top_navigation.html');
+		?>
 		<!-- Nav -->
-				<nav class="navbar starpl-top-nav affix-top affix-bottom" data-spy="affix" data-offset-top="153">
+				<!-- <nav class="navbar starpl-top-nav affix-top affix-bottom" data-spy="affix" data-offset-top="125">
 					<div class="container">
 						<ul class="nav navbar-nav" id="inner-starpl-top-nav">
 							<li class="active"><a href="/">StArPl</a></li>
@@ -33,7 +36,7 @@
 							<li id="logoutLink" class="collapse" onclick="logout()" ><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
 						</ul>
 					</div>
-				</nav>
+				</nav> -->
 		<!-- Nav end -->
 
 		<div class="center-block box-content">
@@ -68,7 +71,7 @@
 						<span class="glyphicon glyphicon-remove"></span> Verlängern abbrechen
 					</button>
         </div>
-s      </form>
+     	</form>
 
 			<div id="formUser-divError" class="alert alert-danger collapse">
 			</div>
