--- a/html/login.html
+++ b/html/login.html
@@ -16,6 +16,10 @@
 		<link rel="stylesheet" href="css/own.css">
 	</head>
 
+	<?php
+		include('html/top_navigation.html');
+	?>
+
 	<body>
 		<div class="jumbotron center-block box-header" onclick="location.reload();" id="starpl-header">
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Login</h2>
