--- a/html/upload.html
+++ b/html/upload.html
@@ -20,8 +20,11 @@
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Hochladen</h2>
 		</div>
 
+		<?php
+			include('html/top_navigation.html');
+		?>
 <!-- Nav -->
-		<nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="113">
+		<!-- <nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="113">
 			<div class="container">
 				<ul class="nav navbar-nav" id="inner-starpl-top-nav">
 					<li class="active"><a href="/">StArPl</a></li>
@@ -30,7 +33,7 @@
 					<li id="logoutLink" class="collapse" onclick="logout()"><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
 				</ul>
 			</div>
-		</nav>
+		</nav> -->
 <!-- Nav end -->
 
 
