--- a/html/upload.html
+++ b/html/upload.html
@@ -23,21 +23,7 @@
 		<?php
 			include('html/top_navigation.html');
 		?>
-<!-- Nav -->
-		<!-- <nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="113">
-			<div class="container">
-				<ul class="nav navbar-nav" id="inner-starpl-top-nav">
-					<li class="active"><a href="/">StArPl</a></li>
-					<li class="logoutHidden collapse"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>
-					<li class="logoutHidden collapse" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span> Bearbeiten </a></li>
-					<li id="logoutLink" class="collapse" onclick="logout()"><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
-				</ul>
-			</div>
-		</nav> -->
-<!-- Nav end -->
-
-
-		<div class="center-block box-content">
+		<div class="center-block box-content" id="starpl-content">
 			<form method="post" action="." name="formUpload" id="formUpload" onsubmit="return upload();" enctype="multipart/form-data">
 				<h3>Hochladen von Arbeiten</h3>
 				<div class="form-group">
