--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<title>StArPl</title>
 		<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
@@ -13,18 +12,15 @@
 		<script src="js/viewArbeiten.js"></script>
 		<script src="js/fileinput.min.js"></script> <!-- 4.4.3-10 -->
 		<link rel="icon" href="img/icon.ico">
-		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"> -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css">
 		<link rel="stylesheet" href="css/own.css">
-		<link rel="stylesheet" href="css/fileinput.min.css"> <!-- 4.4.3-10 -->
+		<link rel="stylesheet" href="css/fileinput.min.css">
 	</head>
 	<body>
 
 		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllArbeiten();getOwnUser();changeFachbereich();">
-			<!-- <img src="img/logo.png" width="100px" height="100px" /></span> -->
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
 		</div>
 
@@ -32,20 +28,7 @@
 			include('html/top_navigation.html');
 		?>
 
-		<!-- <nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="113">
-			<div class="container">
-				<ul class="nav navbar-nav" id="inner-starpl-top-nav">
-			    <li class="active"><a href="/">StArPl</a></li>
-			    <li class="logoutHidden collapse"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>
-			    <li class="logoutHidden collapse" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span> Bearbeiten </a></li>
-			    <li class="logoutHidden uploadLink collapse"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span> Hochladen </a></li>
-					<li id="loginLink" class="collapse"><a href="./?upload"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>
-					<li id="logoutLink" class="collapse" onclick="logout()"><a><span class="glyphicon glyphicon-log-out"></span> Abmelden </a></li>
-			  </ul>
-			</div>
-		</nav> -->
-
-		<div class="center-block box-content">
+		<div class="center-block box-content" id="starpl-content">
 			<div class="row">
 				<div class="col-md-3">
 					<ul class="nav fb_side">
