--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 
-		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllArbeiten();getOwnUser();changeFachbereich();">
+		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllArbeiten();user.getCurrent();changeFachbereich();">
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
 		</div>
 
