--- a/html/top_navigation.html
+++ b/html/top_navigation.html
@@ -1,11 +1,23 @@
 <nav class="navbar starpl-top-nav affix-top" data-spy="affix" data-offset-top="105">
   <div class="container">
-    <ul class="nav navbar-nav" id="inner-starpl-top-nav">
-      <li class="active"><a href="/">StArPl</a></li>
-      <?= (check_if_logged_in() && check_if_min_dozent($_SESSION["starpl"]["user_id"]))? '<li data-role="1" class="nav_ur collapse"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>' :""; ?>
-      <?= (check_if_logged_in() && check_if_min_student($_SESSION["starpl"]["user_id"]))? '<li data-role="0" class="nav_ur collapse" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span><span class="hidden-xs"> Bearbeiten </span></a></li>' :""; ?>
-      <?= (check_if_logged_in() && check_if_min_student($_SESSION["starpl"]["user_id"]))? '<li data-role="0" class="nav_ur collapse"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span><span class="hidden-xs"> Hochladen </span></a></li>' :""; ?>
-      <?= (!check_if_logged_in())? '<li id="loginLink" class="collapse"><a href="./login.php"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>' :""; ?>
+    <ul class="nav navbar-nav inner-starpl-top-nav" >
+      <li id="starplLink"><a href="/">
+       <span class="glyphicon glyphicon-home"></span> StArPl
+      </a></li>
+      <?php
+      if (check_if_logged_in()){
+        $user_role = get_user_role($_SESSION["starpl"]["user_id"]);
+      }
+      else{
+        $user_role = -1;
+      }
+      ?>
+      <?= ($user_role >= $ROLLE_DOZENT)? '<li class="nav_ur collapse'.((isset($create_active) && $create_active)? ' active' : '').'"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>' :""; ?>
+      <?= ($user_role >= $ROLLE_STUDENT)? '<li class="nav_ur collapse'.((isset($edit_active) && $edit_active)? ' active' : '').'" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span><span class="hidden-xs"> Bearbeiten </span></a></li>' :""; ?>
+      <?= ($user_role >= $ROLLE_STUDENT)? '<li class="nav_ur collapse'.((isset($upload_active) && $upload_active)? ' active' : '').'"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span><span class="hidden-xs"> Hochladen </span></a></li>' :""; ?>
+    </ul>
+    <ul class="nav navbar-nav inner-starpl-top-nav right-menu" >
+      <?= (!check_if_logged_in())? '<li id="loginLink" class="collapse '.((isset($login_active) && $login_active)? ' active' : '').'"><a href="./login.php"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>' :""; ?>
       <?= (check_if_logged_in())? '<li data-role="0" id="logoutLink" class="nav_ur collapse" ><a href="./?action=logout"><span class="glyphicon glyphicon-log-out"></span><span class="hidden-xs"> Abmelden </span></a></li>' :""; ?>
     </ul>
   </div>
