Add mustache templates

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>StArPl</title>
 		<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.2/mustache.js"></script>
+		<script src="https://raw.githack.com/jonnyreeves/jquery-Mustache/master/jquery.mustache.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
@@ -35,23 +37,23 @@
 			<div class="row">
 				<div class="col-md-3">
 					<ul class="nav fb_side">
-							<li><a>Bank</a></li>
-							<li><a>Bauwesen</a></li>
-							<li><a>Dienstleistungsmanagement</a></li>
-							<li><a>Elektrotechnik</a></li>
-							<li><a>Facility Management</a></li>
-							<li><a>Handel</a></li>
-							<li><a>IBA</a></li>
-							<li><a>Immobilienwirtschaft</a></li>
-							<li><a>Industrie</a></li>
-							<li><a>Informatik</a></li>
-							<li><a>Maschinenbau</a></li>
-							<li><a>PPM</a></li>
-							<li><a>Spedition/Logistik</a></li>
-							<li><a>Steuern/Prüfungswesen</a></li>
-							<li><a>Tourismusbetriebswirtschaft</a></li>
-							<li><a>Versicherung</a></li>
-							<li><a>Wirtschaftsinformatik</a></li>
+							<li id="fb_0"><a>Bank</a></li>
+							<li id="fb_1"><a>Bauwesen</a></li>
+							<li id="fb_2"><a>Dienstleistungsmanagement</a></li>
+							<li id="fb_3"><a>Elektrotechnik</a></li>
+							<li id="fb_4"><a>Facility Management</a></li>
+							<li id="fb_5"><a>Handel</a></li>
+							<li id="fb_6"><a>IBA</a></li>
+							<li id="fb_7"><a>Immobilienwirtschaft</a></li>
+							<li id="fb_8"><a>Industrie</a></li>
+							<li id="fb_9"><a>Informatik</a></li>
+							<li id="fb_10"><a>Maschinenbau</a></li>
+							<li id="fb_11"><a>PPM</a></li>
+							<li id="fb_12"><a>Spedition/Logistik</a></li>
+							<li id="fb_13"><a>Steuern/Prüfungswesen</a></li>
+							<li id="fb_14"><a>Tourismusbetriebswirtschaft</a></li>
+							<li id="fb_15"><a>Versicherung</a></li>
+							<li id="fb_16"><a>Wirtschaftsinformatik</a></li>
 						</ul>
 
 
