--- a/html/top_navigation.html
+++ b/html/top_navigation.html
@@ -12,13 +12,13 @@
         $user_role = -1;
       }
       ?>
-      <?= ($user_role >= $ROLLE_DOZENT)? '<li class="nav_ur collapse'.((isset($create_active) && $create_active)? ' active' : '').'"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>' :""; ?>
-      <?= ($user_role >= $ROLLE_STUDENT)? '<li class="nav_ur collapse'.((isset($edit_active) && $edit_active)? ' active' : '').'" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span><span class="hidden-xs"> Bearbeiten </span></a></li>' :""; ?>
-      <?= ($user_role >= $ROLLE_STUDENT)? '<li class="nav_ur collapse'.((isset($upload_active) && $upload_active)? ' active' : '').'"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span><span class="hidden-xs"> Hochladen </span></a></li>' :""; ?>
+      <?= ($user_role >= $ROLLE_DOZENT)? '<li class="collapse'.((isset($create_active) && $create_active)? ' active' : '').'"><a href="./?create"><span class="glyphicon glyphicon-education"></span> Studenten-Accounts</a></li>' :""; ?>
+      <?= ($user_role >= $ROLLE_STUDENT)? '<li class="collapse'.((isset($edit_active) && $edit_active)? ' active' : '').'" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span><span class="hidden-xs"> Bearbeiten </span></a></li>' :""; ?>
+      <?= ($user_role >= $ROLLE_STUDENT)? '<li class="collapse'.((isset($upload_active) && $upload_active)? ' active' : '').'"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span><span class="hidden-xs"> Hochladen </span></a></li>' :""; ?>
     </ul>
     <ul class="nav navbar-nav inner-starpl-top-nav right-menu" >
       <?= (!check_if_logged_in())? '<li id="loginLink" class="collapse '.((isset($login_active) && $login_active)? ' active' : '').'"><a href="./login.php"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>' :""; ?>
-      <?= (check_if_logged_in())? '<li data-role="0" id="logoutLink" class="nav_ur collapse" ><a href="./?action=logout"><span class="glyphicon glyphicon-log-out"></span><span class="hidden-xs"> Abmelden </span></a></li>' :""; ?>
+      <?= (check_if_logged_in())? '<li id="logoutLink" class="nav_ur collapse" ><a href="./?action=logout"><span class="glyphicon glyphicon-log-out"></span><span class="hidden-xs"> Abmelden </span></a></li>' :""; ?>
     </ul>
   </div>
 </nav>
