--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>StArPl</title>
-		<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 
-		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllArbeiten();user.getCurrent();changeFachbereich();">
+		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllDocuments();user.getCurrent();changeFachbereich();">
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
 		</div>
 
@@ -66,7 +66,7 @@
 							<tbody></tbody>
 						</table>
 					</div>
-					<form method="post" name="formSaveArbeit" id="formSaveArbeit" onsubmit="return saveArbeit();" enctype="multipart/form-data">
+					<form method="post" name="formUpdateDocument" id="formUpdateDocument" onsubmit="return saveArbeit();" enctype="multipart/form-data">
 						<table class="table table-stripped table-hover table-bordered table-condensed" id="tableDetailledArbeit">
 							<thead></thead>
 							<tbody id="tableBodyDetailledArbeit"></tbody>
@@ -91,7 +91,7 @@
 						</div>
 					</form>
 					<div class="form-group text-right" id="editButtons">
-						<button onclick="deleteArbeit();" class="btn btn-danger myhidden" >
+						<button onclick="deleteDocument();" class="btn btn-danger myhidden" >
 							<span class="glyphicon glyphicon-remove"></span> Löschen
 						</button>
 						<button onclick="editArbeit();" class="btn btn-primary">
