Change how attributes like fb and language are saved in the database

--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -26,8 +26,17 @@
 		<div class="center-block box-content" id="starpl-content" >
 
 			<table class="table table-stripped table-hover table-bordered table-condensed" id="tableExistingUsers">
-				<thead id="tableHeader"></thead>
-				<tbody></tbody>
+				<thead id="tableHeader">
+					<tr>
+						<th>Kürzel</th>
+						<th>Erstellte Arbeiten </th>
+						<th>Gültig bis:</th>
+						<th><span class="glyphicon glyphicon-pencil"></span></th>
+						<th><span class="glyphicon glyphicon-trash"></span></th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
 			</table>
 
 			<h3 id="userFormTitle">Temporären Studenten-Account erstellen</h3>
