Change URLs to use https

--- a/html/site_notice.html
+++ b/html/site_notice.html
@@ -46,5 +46,9 @@
           </p>
     </div>
 	</body>
-
+  <footer class="page-footer">
+    <div class="footer-copyright text-center">
+      © 2018 HWR Berlin, FB 2 Duales Studium, FR Informatik
+    </div>
+  </footer>
 </html>
