--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -49,7 +49,7 @@
 				</div>
 		</div>
 		<input name="csrf_token" id="csrf_token" hidden value="<?= $_SESSION['csrf_token'] ?>" />
-		<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.2/mustache.js"></script>
 		<script src="https://raw.githack.com/jonnyreeves/jquery-Mustache/master/jquery.mustache.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
